MarcoKitTests/TestData/error/object7.marco
--before
{5 5}

--after
1: Unexpected identifier character ' '
